[package]
name = "fogcore"
version = "0.1.0"
authors = ["Licheng Mao <tavimori@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = [ "native", "premium" ]
native = [ "tokio/rt-multi-thread", "tokio/macros" ]
premium = []
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = {version = "0.2.84", optional = true}
js-sys = {version = "0.3.68", optional = true}

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
tiny-skia = "0.11.1"
miniz_oxide = "0.8.0"
wgpu = "22.1.0"
bytemuck = "1.17.0"
wasm-bindgen-futures = "0.4.43"
tokio = { version = "1.40.0", features = ["rt", "sync"] }
tokio-macros = "2.4.0"
image = { version = "0.25.2", features = ["png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"
sha2 = "0.10"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[[bench]]
name = "my_benchmark"
harness = false
