[package]
name = "fogcore"
version = "0.1.0"
authors = ["Licheng Mao <tavimori@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native", "premium"]
native = [
    "tokio/rt-multi-thread",
    "tokio/macros",
    "actix-web",
    "actix-web-actors",
    "actix",
    "serde",
    "actix-files"
]
premium = []
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.84", optional = true }
js-sys = { version = "0.3.68", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
miniz_oxide = "0.7.1"
wgpu = "23.0.0"
bytemuck = { version = "1.17.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.43"
tokio = { version = "1.40.0", features = ["rt", "sync"] }
tokio-macros = "2.4.0"
image = { version = "0.25.2", features = ["png"] }
winit = "0.30.5"
pollster = "0.4.0"
rand = "0.8.5"
env_logger = "0.11.5"
futures-intrusive = "0.5.0"
flume = "0.11.1"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
serde = { version = "1.0.215", optional = true }
actix-web = { version = "4.9.0", optional = true }
actix-web-actors = { version = "4.3.1", optional = true }
actix = { version = "0.13.5", optional = true }
serde_json = "1.0"
actix-files = { version = "0.6.6", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2.15", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
criterion = { version = "0.5", features = ["html_reports"] }

sha2 = "0.10"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[[bench]]
name = "tiling_benchmark"
harness = false
